--- a/desktop/src/kibana/styles/_navbar.less
+++ b/desktop/src/kibana/styles/_navbar.less
@@ -38,9 +38,7 @@ navbar {
     .align-self(center);
 
     font-size: @font-size-large;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    .ellipsis();
   }
 
   button {
