--- a/desktop/src/kibana/apps/dashboard/styles/main.less
+++ b/desktop/src/kibana/apps/dashboard/styles/main.less
@@ -1,5 +1,6 @@
 @import (reference) "../../../styles/_bootstrap.less";
 @import (reference) "../../../styles/theme/_theme.less";
+@import (reference) "../../../styles/_mixins.less";
 @import (reference) "lesshat.less";
 
 @dashboard-background: @gray-light;
@@ -71,9 +72,7 @@ dashboard-grid {
 
         .panel-title {
           font-size: inherit;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
+          .ellipsis();
           .flex(1 1 0);
         }
 
