--- a/desktop/src/kibana/styles/_sidebar.less
+++ b/desktop/src/kibana/styles/_sidebar.less
@@ -38,9 +38,7 @@
       .sidebar-item-title {
         padding: 5px 10px;
         white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        position: relative;
+        .ellipsis();
 
         &.full-title {
           white-space: normal;
