--- a/desktop/src/kibana/styles/_variables.less
+++ b/desktop/src/kibana/styles/_variables.less
@@ -17,3 +17,8 @@
 @sidebar-active-bg: @component-active-bg;
 @sidebar-active-hover-bg: @component-active-bg;
 @sidebar-active-hover-color: @component-active-color;
+
+@vis-editor-sidebar-width: 300px;
+@vis-editor-nesting-width: 3px;
+@vis-editor-nesting-expand-width: 10px;
+@vis-editor-agg-editor-spacing: 5px;
