--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -1,6 +1,9 @@
 @import "../../bower_components/font-awesome/less/font-awesome.less";
 @import (reference) "lesshat.less";
 
+// generic mixins
+@import (reference) "./_mixins.less";
+
 // Import variable files
 @import "./_variables.less";
 
@@ -32,6 +35,7 @@
 
 html,
 body {
+  .flex-parent();
   height: 100%;
   margin: 0px;
 }
@@ -85,6 +89,7 @@ ul.navbar-inline li {
 }
 
 .content {
+  .flex-parent();
   position: relative;
   z-index: 0;
 
@@ -92,11 +97,12 @@ ul.navbar-inline li {
     position: relative;
     z-index: 1;
   }
+}
 
-  > .application {
-    position: relative;
-    z-index: 0;
-  }
+.application {
+  .flex-parent();
+  position: relative;
+  z-index: 0;
 }
 
 .top-fixed {
@@ -125,7 +131,6 @@ notifications {
 }
 
 //== Config
-
 .config {
   .navbar;
   .navbar-default;
