--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -383,7 +383,7 @@ p.rows-label, p.columns-label {
 
 .x-axis-div-wrapper {
   display: flex;
-  flex: 3 1;
+  flex: 5 1;
   flex-direction: row;
 }
 
@@ -429,6 +429,22 @@ p.rows-label, p.columns-label {
 
 .open6 {
   flex: 6 1;
+}
+
+.open7 {
+  flex: 7 1;
+}
+
+.open8 {
+  flex: 8 1;
+}
+
+.open9 {
+  flex: 9 1;
+}
+
+.open12 {
+  flex: 12 1;
 }
 
 li.color {
