--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -109,20 +109,7 @@ div.y-axis-label {
 }
 
 /*  legends  */
-.legendwrapper {
-  flex: 0 0 auto;
-  margin: 0;
-  padding: 10px 10px 10px 0;
-  /*border: 1px solid #ddd;*/
-  /*position: absolute;*/
-  float: right;
-  /*width: 30px;*/
-  /*height: 25px;*/
-  /*top: 34px;*/
-  /*right: 10px;*/
-  z-index: 10;
-  overflow: hidden;
-}
+
 .legendwrapper.legend-open {
   width: auto;
 }
@@ -408,7 +395,7 @@ p.rows-label, p.columns-label {
 .legend-col-wrapper {
   flex: 1 1;
   z-index: 10;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .open2 {
