--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -378,10 +378,12 @@ p.rows-label, p.columns-label {
   display: flex;
   flex: 1 1;
   flex-direction: row;
+  min-height: 18px;
 }
 
 .x-axis-title {
   flex: 1 1;
+  min-height: 18px;
 }
 
 .x-axis-title text {
