updated some class names

--- a/desktop/src/kibana/components/agg_types/controls/extended_bounds.html
+++ b/desktop/src/kibana/components/agg_types/controls/extended_bounds.html
@@ -1,4 +1,4 @@
-<div ng-if="aggParam.shouldShow(aggConfig)" class="vis-editor-form-row">
+<div ng-if="aggParam.shouldShow(aggConfig)" class="vis-editor-agg-form-row">
   <div class="form-group">
     <label>Min <small>(optional)</small></label>
     <input
