--- a/desktop/src/kibana/components/agg_types/controls/filters.html
+++ b/desktop/src/kibana/components/agg_types/controls/filters.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <div ng-repeat="filter in params.filters">
     <label>Query string {{$index + 1}}</label>
-    <div class="form-group vis-editor-form-row">
+    <div class="form-group vis-editor-agg-form-row">
       <input query-input
         ng-model="filter.query"
         type="text"
