--- a/desktop/src/kibana/components/agg_types/controls/order_and_size.html
+++ b/desktop/src/kibana/components/agg_types/controls/order_and_size.html
@@ -1,4 +1,4 @@
-<div class="vis-editor-form-row">
+<div class="vis-editor-agg-form-row">
   <div ng-if="aggType.params.byName.order" class="form-group">
     <label>Order</label>
     <select
