--- a/desktop/src/kibana/components/agg_types/controls/ranges.html
+++ b/desktop/src/kibana/components/agg_types/controls/ranges.html
@@ -1,4 +1,4 @@
-<table class="vis-agg-editor-ranges form-group">
+<table class="vis-editor-agg-editor-ranges form-group">
   <tr>
     <th>
       <label>From</label>
