--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -53,7 +53,7 @@ visualize {
 
 .y-axis-div {
   flex: 5 1;
-  margin: 3px 0px;
+  margin: 4px 0px;
 }
 
 .y-axis-filler-div {
@@ -109,13 +109,6 @@ div.y-axis-label {
 }
 
 /*  legends  */
-.legendwrapper.legend-open {
-  width: auto;
-}
-.legendwrapper.legend-closed {
-  width: 40px;
-}
-
 .header {
   width: 100%;
   height: 26px;
@@ -225,9 +218,10 @@ p.rows-label, p.columns-label {
   stroke-width: 1px;
 }
 
-.axis line, .axis path {
+line, .axis line, .axis path {
   stroke: #ddd;
   fill: none;
+  shape-rendering: crispEdges;
 }
 
 .legend-box {
@@ -294,6 +288,7 @@ p.rows-label, p.columns-label {
 
 .y-axis-title {
   flex: 1 1;
+  min-width: 16px
 }
 
 .y-axis-title text {
@@ -304,6 +299,7 @@ p.rows-label, p.columns-label {
   display: flex;
   flex: 1 1;
   flex-direction: column;
+    min-width: 16px
 }
 
 .chart-title {
@@ -319,11 +315,6 @@ p.rows-label, p.columns-label {
   display: flex;
   flex: 3 1;
   flex-direction: column;
-}
-
-.y-axis-div {
-  flex: 1 1;
-  overflow: visible;
 }
 
 .vis-col-wrapper {
@@ -377,12 +368,12 @@ p.rows-label, p.columns-label {
   display: flex;
   flex: 1 1;
   flex-direction: row;
-  min-height: 18px;
+  min-height: 16px;
 }
 
 .x-axis-title {
   flex: 1 1;
-  min-height: 18px;
+  min-height: 16px;
 }
 
 .x-axis-title text {
@@ -397,6 +388,7 @@ p.rows-label, p.columns-label {
   flex: 1 1;
   z-index: 10;
   overflow: auto;
+  min-width: 34px;
 }
 
 .open2 {
@@ -441,4 +433,8 @@ li.color {
 
 .x.axis path {
   display: none;
+}
+
+svg:not(:root) {
+  overflow: visible;
 }
