updated refs to point to savedVis, not vis, and added title to vis canvas

--- a/desktop/src/kibana/apps/new_visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.less
@@ -148,12 +148,18 @@
   &-canvas {
     .flex(1, 0, @screen-md-min - @vis-editor-sidebar-width);
     .display(flex);
+    .flex-direction(column);
     overflow: auto;
 
     // overrided for tablet and desktop
     @media (min-width: @screen-md-min) {
       .flex-shrink(1);
       .flex-basis(100%);
+    }
+
+    &-title {
+      text-align: center;
+      margin: 10px 0 0;
     }
 
     visualize {
