working on axis labels

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -1,4 +1,4 @@
-/* Stylings that will blow your mind! */
+/* vislib styles */
 
 .arc path {
   stroke: #fff;
@@ -162,13 +162,6 @@ li.color {
   /*stroke: #ddd;*/
   /*shape-rendering: crispEdges;*/
 }
-
-/*.rows-label, .columns-label {
-  font-size: 10pt;
-  fill: #46525d;
-  text-align: center;
-  line-height: 1.5em;
-}*/
 
 p.rows-label, p.columns-label {
   display: block;
@@ -421,8 +414,3 @@ li.color {
   display: none;
 }
 
-/*
-svg:not(:root) {
-  overflow: visible;
-}
-*/
