--- a/desktop/src/kibana/apps/new_visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.less
@@ -142,6 +142,12 @@
     &-add-form {
       margin: @vis-editor-agg-editor-spacing * 3;
       padding: @vis-editor-agg-editor-spacing;
+      > button {
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0 0 5px 0;
+      }
     }
   }
 
