fix visualize sidebar on mobile screens

--- a/desktop/src/kibana/apps/new_visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.less
@@ -32,9 +32,8 @@
   }
 
   &-sidebar {
-    .flex-parent(0, 0, 100%);
+    .flex-parent(0, 0, auto);
     overflow: auto;
-
 
     // overrided for tablet and desktop
     @media (min-width: @screen-md-min) {
