moved validation into the form

--- a/desktop/src/kibana/components/agg_types/controls/interval.html
+++ b/desktop/src/kibana/components/agg_types/controls/interval.html
@@ -3,6 +3,7 @@
   <select
     ng-if="aggParam.options"
     ng-model="params.interval"
+    required
     ng-options="opt as opt.display for opt in aggParam.options"
     class="form-control"
     name="interval">
@@ -10,6 +11,7 @@
   <input
     ng-if="!aggParam.options"
     ng-model="params.interval"
+    required
     type="number"
     class="form-control"
     name="interval" />
