--- a/desktop/src/kibana/components/agg_types/controls/field.html
+++ b/desktop/src/kibana/components/agg_types/controls/field.html
@@ -6,6 +6,7 @@
     class="form-control"
     name="field"
     ng-model="params.field"
+    required
     ng-options="
       field as field.name group by field.type for field in aggConfig.vis.indexPattern.fields.raw
       | fieldType: aggParam.filterFieldTypes
