--- a/desktop/src/kibana/components/agg_types/controls/order_and_size.html
+++ b/desktop/src/kibana/components/agg_types/controls/order_and_size.html
@@ -2,14 +2,20 @@
   <div ng-if="aggType.params.byName.order" class="form-group">
     <label>Order</label>
     <select
-      class="form-control"
       name="order"
       ng-model="params.order"
-      ng-options="opt as opt.display for opt in aggParam.options">
+      required
+      ng-options="opt as opt.display for opt in aggParam.options"
+      class="form-control">
     </select>
   </div>
   <div class="form-group">
     <label>Size</label>
-    <input class="form-control" type="number" ng-model="params.size" name="size">
+    <input
+      name="size"
+      ng-model="params.size"
+      required
+      class="form-control"
+      type="number">
   </div>
 </div>
