--- a/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
+++ b/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
@@ -1,14 +1,14 @@
 <div ng-show="spyMode.name === 'request'">
-  <pre>{{history[0].req | json}}</pre>
+  <pre>{{history.req | json}}</pre>
 </div>
 
 <div ng-show="spyMode.name === 'response'">
-  <pre>{{history[0].resp | json}}</pre>
+  <pre>{{history.resp | json}}</pre>
 </div>
 
 <div ng-show="spyMode.name === 'stats'">
   <table class="table">
-    <tr ng-repeat="pair in history[0].meta">
+    <tr ng-repeat="pair in history.meta">
       <td>{{pair[0]}}</td>
       <td>{{pair[1]}}</td>
     </tr>
