[app/visualize/editor] display validation state

--- a/desktop/src/kibana/apps/new_visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.less
@@ -107,6 +107,12 @@
         font-weight: normal;
       }
 
+      &-error {
+        font-weight: normal;
+        font-style: italic;
+        color: @brand-warning;
+      }
+
       &-controls {
         .flex(0, 0, auto);
       }
