--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -361,7 +361,8 @@ button[disabled] {
   }
 }
 
-input.ng-invalid {
+input.ng-invalid,
+select.ng-invalid {
   border-color: @state-danger-bg !important;
 }
 
