[app/visualize/editor] show validity only when the form is dirty

--- a/desktop/src/kibana/styles/main.less
+++ b/desktop/src/kibana/styles/main.less
@@ -361,8 +361,8 @@ button[disabled] {
   }
 }
 
-input.ng-invalid,
-select.ng-invalid {
+input.ng-dirty.ng-invalid,
+select.ng-dirty.ng-invalid {
   border-color: @state-danger-bg !important;
 }
 
