[app/visualize/editor] use _.cloneDeep to ensure that param values are not exposed when exporting state

--- a/desktop/src/kibana/components/agg_types/controls/interval.html
+++ b/desktop/src/kibana/components/agg_types/controls/interval.html
@@ -1,4 +1,4 @@
-<div ng-if="aggParam.options || params.field.type === 'number'" class="form-group">
+<div class="form-group">
   <label>Interval</label>
   <select
     ng-if="aggParam.options"
