--- a/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
+++ b/desktop/src/kibana/components/visualize/spy/_req_resp_stats.html
@@ -1,3 +1,7 @@
+<div ng-if="!history.complete" class="alert alert-info" role="alert">
+  Request in progress
+</div>
+
 <div ng-show="spyMode.name === 'request'">
   <pre>{{history.req | json}}</pre>
 </div>
