--- a/desktop/src/kibana/apps/dashboard/partials/panel.html
+++ b/desktop/src/kibana/apps/dashboard/partials/panel.html
@@ -1,11 +1,16 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <span class="panel-title">{{vis.title}}</span>
+    <span class="panel-title">{{savedVis.title}}</span>
     <div class="btn-group">
-	  <a ng-show="!appEmbedded" ng-href="#visualize/edit/{{vis.title | uriescape}}"><i class="fa fa-pencil"></i></a>
+	  <a ng-show="!appEmbedded" ng-href="#visualize/edit/{{savedVis.title | uriescape}}"><i class="fa fa-pencil"></i></a>
       <a ng-show="!appEmbedded" ng-click="remove()"><i class="fa fa-times"></i></a>
     </div>
     <div class="clearfix"></div>
   </div>
-  <visualize vis="vis"></visualize>
+
+  <div ng-if="error" class="load-error">
+    <i class="fa fa-exclamation-triangle"></i>
+    <span ng-bind="error"></span>
+  </div>
+  <visualize ng-if="savedVis" vis="savedVis.vis" search-source="savedVis.searchSource"></visualize>
 </div>
