--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -55,16 +55,6 @@ visualize {
   flex: 1 1;
 }
 
-.vis-wrapper {
-  display: flex;
-  flex: 5 1;
-  flex-direction: column;
-}
-
-.x-axis-div {
-  flex: 1 1;
-}
-
 .legend-wrapper {
   flex: 1 1;
 }
@@ -194,7 +184,7 @@ p.rows-label, p.columns-label {
   stroke-width: 1px;
 }
 
-line, .axis line, .axis path {
+path, line, .axis line, .axis path {
   stroke: #ddd;
   fill: none;
   shape-rendering: crispEdges;
@@ -242,7 +232,7 @@ line, .axis line, .axis path {
   display: flex;
   flex: 1 1 100%;
   flex-direction: row;
-  /*margin: 10px;*/
+  margin: 10px 0 0 6px;
 }
 
 /* YAxis logic */
@@ -334,12 +324,14 @@ line, .axis line, .axis path {
   display: flex;
   flex: 5 1;
   flex-direction: column;
+  overflow: visible;
 }
 
 .x-axis-div-wrapper {
   display: flex;
   flex: 5 1;
   flex-direction: row;
+  overflow: visible;
 }
 
 .x-axis-chart-title {
@@ -360,12 +352,15 @@ line, .axis line, .axis path {
 
 .x-axis-div {
   flex: 1 1;
+  overflow: visible;
+  margin-top: -5px;
 }
 
 .legend-col-wrapper {
   flex: 1 1;
   z-index: 10;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   min-width: 34px;
 }
 
