[discover] set min_doc_count in the histogram so it won't change size

--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -68,6 +68,10 @@ visualize-spy {
     padding: 10px 10px 0;
     overflow-y: auto;
 
+    > .alert {
+      .flex(0 0 auto);
+    }
+
     tr > td {
       font-size: 0.85em;
     }
