--- a/desktop/src/kibana/apps/visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/editor.less
@@ -105,12 +105,12 @@
 
       &-description {
         font-weight: normal;
-      }
+        padding-right: @vis-editor-agg-editor-spacing;
 
-      &-error {
-        font-weight: normal;
-        font-style: italic;
-        color: @brand-warning;
+        &.danger {
+          .text-danger();
+          font-weight: bold;
+        }
       }
 
       &-controls {
