--- a/desktop/src/kibana/apps/visualize/editor/editor.less
+++ b/desktop/src/kibana/apps/visualize/editor/editor.less
@@ -37,7 +37,8 @@
 
     // overrided for tablet and desktop
     @media (min-width: @screen-md-min) {
-      .flex-basis(@vis-editor-sidebar-width);
+      .flex-basis(@vis-editor-sidebar-basis);
+      min-width: @vis-editor-sidebar-min-width;
     }
 
     .sidebar-container {
