revised XAxis and main.less to handle tick labels, rotate, filter, disciver

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -249,7 +249,7 @@ path, line, .axis line, .axis path {
 }
 
 .y-axis-spacer-block {
-  flex: 5 1;
+  // flex: 5 1;
 }
 
 .y-axis-title {
@@ -322,16 +322,17 @@ path, line, .axis line, .axis path {
 
 .x-axis-wrapper {
   display: flex;
-  flex: 5 1;
+  // flex: 5 1;
   flex-direction: column;
   overflow: visible;
 }
 
 .x-axis-div-wrapper {
   display: flex;
-  flex: 5 1;
+  /*flex: 5 1;*/
   flex-direction: row;
   overflow: visible;
+  min-height: 16px;
 }
 
 .x-axis-chart-title {
@@ -364,38 +365,36 @@ path, line, .axis line, .axis path {
   min-width: 34px;
 }
 
+.open1 {
+  flex: 1 1;
+}
 .open2 {
   flex: 2 1;
 }
-
 .open3 {
   flex: 3 1;
 }
-
 .open4 {
   flex: 4 1;
 }
-
 .open5 {
   flex: 5 1;
 }
-
 .open6 {
   flex: 6 1;
 }
-
 .open7 {
   flex: 7 1;
 }
-
 .open8 {
   flex: 8 1;
 }
-
 .open9 {
   flex: 9 1;
 }
-
+.open10 {
+  flex: 10 1;
+}
 .open12 {
   flex: 12 1;
 }
