--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -227,7 +227,7 @@ path, line, .axis line, .axis path {
   stroke: #333;
 }
 
-/* Flex Box Testing */
+/* Flex Box */
 .vis-wrapper {
   display: flex;
   flex: 1 1 100%;
@@ -244,7 +244,7 @@ path, line, .axis line, .axis path {
 
 .y-axis-col {
   display: flex;
-  flex: 25 1;
+  flex: 35 1;
   flex-direction: row;
 }
 
@@ -279,31 +279,31 @@ path, line, .axis line, .axis path {
 
 .y-axis-div-wrapper {
   display: flex;
-  flex: 2 1;
+  flex: 1 1;
   flex-direction: column;
 }
 
 .vis-col-wrapper {
   display: flex;
-  flex: 25 1;
+  flex: 35 1;
   flex-direction: column;
 }
 
 .chart-wrapper {
   display: flex;
-  flex: 25 1;
+  flex: 35 1;
   overflow: visible;
 }
 
 .chart-wrapper-column {
   display: flex;
-  flex: 25 1;
+  flex: 35 1;
   flex-direction: row;
 }
 
 .chart-wrapper-row {
   display: flex;
-  flex: 25 1;
+  flex: 35 1;
   flex-direction: column;
 }
 
@@ -365,36 +365,38 @@ path, line, .axis line, .axis path {
   min-width: 34px;
 }
 
-.open1 {
-  flex: 1 1;
-}
 .open2 {
   flex: 2 1;
 }
+
 .open3 {
   flex: 3 1;
 }
+
 .open4 {
   flex: 4 1;
 }
+
 .open5 {
   flex: 5 1;
 }
+
 .open6 {
   flex: 6 1;
 }
+
 .open7 {
   flex: 7 1;
 }
+
 .open8 {
   flex: 8 1;
 }
+
 .open9 {
   flex: 9 1;
 }
-.open10 {
-  flex: 10 1;
-}
+
 .open12 {
   flex: 12 1;
 }
