--- a/desktop/src/kibana/styles/main.css
+++ b/desktop/src/kibana/styles/main.css
@@ -7805,7 +7805,9 @@ fieldset[disabled] .form-control {
   opacity: .8;
 }
 input.ng-dirty.ng-invalid,
-select.ng-dirty.ng-invalid {
+select.ng-dirty.ng-invalid,
+form:not(.hide-errors) input.ng-invalid,
+form:not(.hide-errors) select.ng-invalid {
   border-color: #e74c3c !important;
 }
 input[type="radio"][disabled],
