--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -288,6 +288,21 @@ p.rows-label, p.columns-label {
   /*margin: 10px;*/
 }
 
+.error-wrapper {
+  display: flex;
+  flex: 1 1 100%;
+}
+
+.chart-error {
+  display: table-cell;
+  font-size: 18px;
+  text-align: center;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 100%;
+  width: 100%;
+}
+
 /* YAxis logic */
 .y-axis-col-wrapper {
   display: flex;
