troubleshooting issues with brush svg, sizing, etc

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -246,12 +246,11 @@ path, line, .axis line, .axis path {
 }
 
 .chart-error {
-  display: table-cell;
+  flex: 1 1 100%;
   font-size: 18px;
   text-align: center;
-  vertical-align: middle;
+  text-wrap: normal;
   height: 100%;
-  line-height: 100%;
   width: 100%;
 }
 
