reverted main.less, merged in master and merged in latest shelby/vislib/refactor

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -257,7 +257,7 @@ path, line, .axis line, .axis path {
 /* YAxis logic */
 .y-axis-col-wrapper {
   display: flex;
-  flex: 2 1 auto;
+  flex: 2 1;
   flex-direction: column;
 }
 
@@ -268,7 +268,7 @@ path, line, .axis line, .axis path {
 }
 
 .y-axis-spacer-block {
-  // flex: 5 1;
+  flex: 5 1;
 }
 
 .y-axis-title {
@@ -304,7 +304,7 @@ path, line, .axis line, .axis path {
 
 .vis-col-wrapper {
   display: flex;
-  flex: 35 1 auto;
+  flex: 35 1;
   flex-direction: column;
 }
 
@@ -341,14 +341,14 @@ path, line, .axis line, .axis path {
 
 .x-axis-wrapper {
   display: flex;
-  // flex: 5 1;
+  flex: 5 1;
   flex-direction: column;
   overflow: visible;
 }
 
 .x-axis-div-wrapper {
   display: flex;
-  /*flex: 5 1;*/
+  flex: 5 1;
   flex-direction: row;
   overflow: visible;
   min-height: 16px;
@@ -377,7 +377,7 @@ path, line, .axis line, .axis path {
 }
 
 .legend-col-wrapper {
-  flex: 2 1 auto;
+  flex: 2 1;
   z-index: 10;
   overflow-x: hidden;
   overflow-y: auto;
