--- a/desktop/src/kibana/components/agg_types/controls/filters.html
+++ b/desktop/src/kibana/components/agg_types/controls/filters.html
@@ -3,7 +3,7 @@
     <label>Query string {{$index + 1}}</label>
     <div class="form-group vis-editor-agg-form-row">
       <input query-input
-        ng-model="filter.query"
+        ng-model="filter.input.query"
         type="text"
         class="form-control"
         name="filter{{$index}}">
@@ -18,7 +18,8 @@
   </div>
 </div>
 <div
-  ng-click="params.filters.push({})"
+  click-focus="'filter'+(params.filters.length-1)"
+  ng-click="params.filters.push({input:{}})"
   class="sidebar-item-button primary">
   Add filter
 </div>
