--- a/desktop/src/kibana/apps/discover/partials/table.html
+++ b/desktop/src/kibana/apps/discover/partials/table.html
@@ -1,5 +1,9 @@
 <table class="table">
   <thead kbn-table-header columns="columns" mapping="mapping" sorting="sorting" timefield="timefield"></thead>
-  <tbody></tbody>
+  <tbody>
+    <tr ng-repeat="row in rows |limitTo:limit track by row._index+row._id"
+      kbn-table-row="row"
+      columns="columns" mapping="mapping" sorting="sorting" timefield="timefield" max-length="maxLength" filtering="filtering"></tr>
+  </tbody>
 </table>
 <kbn-infinite-scroll more="addRows"></kbn-infinite-scroll>
