Fix column add buttons

--- a/desktop/src/kibana/apps/discover/styles/main.less
+++ b/desktop/src/kibana/apps/discover/styles/main.less
@@ -112,7 +112,7 @@
 }
 
 .sidebar-item:hover:hover button.discover-field-toggle {
-  display: inherit;
+  display: block;
 }
 
 .discover-field-details-close {
@@ -198,6 +198,10 @@ disc-field-chooser {
     li:first-child:nth-last-child(1)[field=_source] button.discover-field-toggle {
       display: none;
     }
+  }
+
+  .sidebar-item-title {
+    position: relative;
   }
 }
 
