--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -55,9 +55,9 @@ visualize {
   flex: 1 1;
 }
 
-// .legend-wrapper {
+//.legend-wrapper {
 //   flex: 1 1;
-// }
+//}
 
 div.x-axis-label {
   position: absolute;
@@ -245,13 +245,10 @@ path, line, .axis line, .axis path {
   flex: 1 1 100%;
 }
 
-.chart-error {
-  flex: 1 1 100%;
+.error {
   font-size: 18px;
   text-align: center;
-  text-wrap: normal;
-  height: 100%;
-  width: 100%;
+  text-wrap: break-word;
 }
 
 /* YAxis logic */
@@ -348,7 +345,7 @@ path, line, .axis line, .axis path {
 
 .x-axis-div-wrapper {
   display: flex;
-  /*flex: 5 1;*/
+//  flex: 5 1;
   flex-direction: row;
   overflow: visible;
   min-height: 16px;
