updates to legend to use flexbox auto

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -90,7 +90,7 @@ div.y-axis-label {
 }
 .legend-ul {
   list-style-type: none;
-  margin: 0 0 0 10px;
+  margin: 0 0 0 10px]]];
   padding: 0;
   visibility: visible;
   display: flex;
