--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -247,14 +247,14 @@ path, line, .axis line, .axis path {
 }
 
 .error-wrapper {
-  display: flex;
   flex: 1 1 100%;
+  text-align: center;
 }
 
-.error {
+.error-wrapper  p {
+  margin-top: 15%;
   font-size: 18px;
-  text-align: center;
-  text-wrap: break-word;
+  text-wrap: wrap;
 }
 
 /* YAxis logic */
