--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -260,9 +260,9 @@ path, line, .axis line, .axis path {
 /* YAxis logic */
 .y-axis-col-wrapper {
   display: flex;
-  flex: 3 1;
+  flex: 0.1 1;
   flex-direction: column;
-  min-width: 60px;
+  min-width: 40px;
 }
 
 .y-axis-col {
@@ -273,7 +273,8 @@ path, line, .axis line, .axis path {
 
 .y-axis-title {
   // flex: 1 1;
-  width: 15px
+  width: 15px;
+  min-width: 15px;
 }
 
 .y-axis-title text {
@@ -298,7 +299,7 @@ path, line, .axis line, .axis path {
 
 .y-axis-div-wrapper {
   display: flex;
-  flex: 1 1 auto;
+  //flex: 1 1 auto;
   flex-direction: column;
   min-width: 20px
 }
@@ -390,4 +391,3 @@ path, line, .axis line, .axis path {
 .x.axis path {
   display: none;
 }
-
