added word-wrpa to main.less for legend and tooltip, added comments to code in x_axis, y_axis, tooltip, legend

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -87,7 +87,7 @@ div.y-axis-label {
   min-width: 40px
 }
 
-.header {
+.legend {
   width: 100%;
   height: 26px;
   margin: 0 0 14px 0;
@@ -113,16 +113,15 @@ li.color {
   margin: 0 18px 0 18px;
   padding: 3px 0 3px 0;
   text-align: left;
-  // word-wrap: break-word;
+  word-wrap: break-word;
+  max-width: 150px;
   font-size: 12px;
   line-height: 13px;
   color: #666;
   // list-style: none;
   cursor: default;
-
   text-align: left;
-  flex-grow: 2;
-
+  //flex-grow: 2;
 }
 
 .dots {
@@ -226,6 +225,8 @@ path, line, .axis line, .axis path {
   position: fixed;
   z-index: 20;
   visibility: hidden;
+  word-wrap: break-word;
+  max-width: 200px;
 }
 
 .rect {
