--- a/desktop/src/kibana/apps/discover/partials/table_header.html
+++ b/desktop/src/kibana/apps/discover/partials/table_header.html
@@ -3,7 +3,7 @@
   <span ng-click="sort(timefield)">Time <i ng-class="headerClass(timefield)"></i></span>
 </th>
 <th ng-repeat="name in columns">
-  <span ng-click="sort(name)">
+  <span ng-click="sort(name)" class="table-header-name">
     {{name}} <i ng-class="headerClass(name)"></i>
   </span>
   <span class="table-header-move">
