fixing error in less file regarding .error p nesting

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -259,7 +259,7 @@ path, line, .axis line, .axis path {
   .flex(1 1 100%);
   text-align: center;
 
-  .p {
+  p {
     margin-top: 15%;
     font-size: 18px;
     text-wrap: wrap;
