--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -48,11 +48,6 @@ visualize {
   .flex-direction(column);
 }
 
-.y-axis-div {
-  .flex(4 1);
-  min-width: 25px
-}
-
 .y-axis-filler-div {
   .flex(1 1);
 }
@@ -81,11 +76,11 @@ div.y-axis-label {
 
 /*  legend  */
 .legend-col-wrapper {
-  .flex(0.3 1 auto);
+  .flex(0 1 auto);
   z-index: 10;
   overflow-x: hidden;
   overflow-y: auto;
-  min-width: 40px
+  min-width: 40px;
 }
 
 .header {
@@ -269,36 +264,46 @@ path, line, .axis line, .axis path {
 /* YAxis logic */
 .y-axis-col-wrapper {
   .display(flex);
-  .flex(0.1 1);
+  .flex(0 0 auto);
   .flex-direction(column);
-  min-width: 40px;
 }
 
 .y-axis-col {
   .display(flex);
-  .flex(35 1);
   .flex-direction(row);
+  .flex(1 0 50px);
+}
+
+.y-axis-spacer-block {
+  .flex(0 1 50px);
+}
+
+.y-axis-div-wrapper {
+  .display(flex);
+  .flex-direction(column);
+  .flex(0 0 33px);
+}
+
+.y-axis-div {
+  .flex(1 1 100%);
 }
 
 .y-axis-title {
-  // flex: 1 1;
-  width: 15px;
-  min-width: 15px;
+  .flex(0 0 15px);
+}
+
+.y-axis-chart-title {
+  .display(flex);
+  .flex-direction(column);
+  .flex(0 0 15px);
 }
 
 .y-axis-title text {
   font-size: 11px;
 }
 
-.y-axis-chart-title {
-  .display(flex);
-  // flex: 1 1;
-  .flex-direction(column);
-  width: 15px
-}
-
 .chart-title {
-  .flex(1 1);
+  .flex(1 1 100%);
 }
 
 .chart-title text {
@@ -306,35 +311,28 @@ path, line, .axis line, .axis path {
   fill: #848e96;
 }
 
-.y-axis-div-wrapper {
-  .display(flex);
-  //flex: 1 1 auto;
-  .flex-direction(column);
-  min-width: 20px
-}
-
 .vis-col-wrapper {
   .display(flex);
-  .flex(35 1);
+  .flex(1 0 20px);
   .flex-direction(column);
 }
 
 .chart-wrapper {
   .display(flex);
-  .flex(35 1);
+  .flex(1 0 20px);
   overflow: visible;
 }
 
 .chart-wrapper-column {
   .display(flex);
-  .flex(35 1);
+  .flex(1 0 20px);
   .flex-direction(row);
 }
 
 .chart-wrapper-row {
   .display(flex);
-  .flex(35 1);
   .flex-direction(column);
+  .flex(1 0 50px);
 }
 
 .chart {
@@ -350,36 +348,27 @@ path, line, .axis line, .axis path {
   .flex(1 1);
 }
 
-.y-axis-spacer-block {
-  .flex(8 1);
-}
-
 .x-axis-wrapper {
   .display(flex);
-  .flex(8 1);
   .flex-direction(column);
+  .flex(0 1 50px);
   overflow: visible;
 }
 
 .x-axis-div-wrapper {
   .display(flex);
-  .flex(8 1);
   .flex-direction(row);
-  min-height: 20px;
+  .flex(0 1 15px);
 }
 
 .x-axis-chart-title {
   .display(flex);
-  .flex(1 1);
   .flex-direction(row);
-  min-height: 15px;
-  max-height: 15px;
+  .flex(0 0 15px);
 }
 
 .x-axis-title {
-  .flex(1 1);
-  min-height: 15px;
-  max-height: 15px;
+  .flex(0 0 15px);
 }
 
 .x-axis-title text {
@@ -387,8 +376,7 @@ path, line, .axis line, .axis path {
 }
 
 .x-axis-div {
-  .flex(8 1);
-  overflow: visible;
+  .flex(1 1 100%);
   margin-top: -5px;
 }
 
