Minimal field_chooser tests

--- a/desktop/src/kibana/apps/discover/components/field_chooser/field_chooser.html
+++ b/desktop/src/kibana/apps/discover/components/field_chooser/field_chooser.html
@@ -15,7 +15,7 @@
         ng-click="showFields = !showFields"
         class="fa visible-xs visible-sm pull-right field-collapse-toggle" ></i>
       <button
-        ng-class="{ 'btn-defualt': !filter.active, 'btn-success': filter.active, 'hidden-xs': !showFields, 'hidden-sm': !showFields }"
+        ng-class="{ 'btn-default': !filter.active, 'btn-success': filter.active, 'hidden-xs': !showFields, 'hidden-sm': !showFields }"
         class="btn btn-xs btn-default pull-right discover-field-filter-toggle"
         ng-click="showFilter = !showFilter">
         <i class="fa fa-gear"></i>
@@ -33,7 +33,6 @@
           Analyzed
         </label>
         <select
-          required
           ng-options="opt.value as opt.label for opt in filter.boolOpts"
           ng-model="filter.vals.analyzed"
           class="form-control">
@@ -44,7 +43,6 @@
           Indexed
         </label>
         <select
-          required
           ng-options="opt.value as opt.label for opt in filter.boolOpts"
           ng-model="filter.vals.indexed"
           class="form-control">
@@ -55,7 +53,6 @@
           Type
         </label>
         <select
-          required
           ng-options="field as field for field in fieldTypes"
           ng-model="filter.vals.type"
           class="form-control">
@@ -84,7 +81,7 @@
 
   <ul bindonce
     ng-show="(fields | filter:filter.popularity).length > 0"
-    class="list-unstyled sidebar-well" ng-class="{ 'hidden-sm': !showFields, 'hidden-xs': !showFields }">
+    class="list-unstyled sidebar-well discover-popular-fields" ng-class="{ 'hidden-sm': !showFields, 'hidden-xs': !showFields }">
     <li class="sidebar-item sidebar-list-header"><h6>Popular fields</h6></li>
     <discover-field
       ng-repeat="field in popularFields | filter:filter.isFieldFiltered"
@@ -93,7 +90,7 @@
     </discover-field>
   </ul>
 
-  <ul bindonce class="list-unstyled" ng-class="{ 'hidden-sm': !showFields, 'hidden-xs': !showFields  }">
+  <ul bindonce class="list-unstyled discover-unpopular-fields" ng-class="{ 'hidden-sm': !showFields, 'hidden-xs': !showFields  }">
     <discover-field
       ng-repeat="field in unpopularFields | filter:filter.isFieldFiltered"
       field="field"
