updated main.less to add right margin to .chart-wrapper and to fix test by adding min-width to .y-axis-col-wrapper

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -266,6 +266,7 @@ path, line, .axis line, .axis path {
   .display(flex);
   .flex(0 0 auto);
   .flex-direction(column);
+  min-width: 35px;
 }
 
 .y-axis-col {
@@ -321,6 +322,7 @@ path, line, .axis line, .axis path {
   .display(flex);
   .flex(1 0 20px);
   overflow: visible;
+  margin: 0 4px 0 0;
 }
 
 .chart-wrapper-column {
