Closes #267 - Adding message to empty dashboard

--- a/desktop/src/kibana/apps/dashboard/styles/main.less
+++ b/desktop/src/kibana/apps/dashboard/styles/main.less
@@ -15,6 +15,18 @@ dashboard-grid {
   padding: 5px;
 }
 
+.start-screen {
+  margin: 20px;
+  background-color: @gray-lighter;
+  padding: 20px;
+
+  i {
+    padding: 4px 8px;
+    background-color: #3d636b;
+    color: white;
+  }
+}
+
 .gridster {
   list-style-type: none;
   display: block;
