Closes #294 - Added CSS and Flexbox elements to align center both vertically and horizontally

--- a/desktop/src/kibana/components/visualize/visualize.less
+++ b/desktop/src/kibana/components/visualize/visualize.less
@@ -29,6 +29,17 @@ visualize {
   }
 }
 
+.visualize-error {
+  .display(flex);
+  .align-items(center);
+  .justify-content(center);
+  .top { .align-self(flext-start); }
+  .item { }
+  .bottom { .align-self(flext-end); }
+
+}
+
+
 visualize-spy {
   // this element should flex
   .flex(0, 0, auto);
