--- a/desktop/src/kibana/components/visualize/visualize.html
+++ b/desktop/src/kibana/components/visualize/visualize.html
@@ -1,7 +1,11 @@
 <div ng-if="chartData.hits === 0"
-  class="visualize-error visualize-chart">
-  <h2><i class="fa fa-meh-o"></i></h2>
-  <h4>No results found</h4>
+  class="text-center visualize-error visualize-chart">
+  <div class="item top"></div>
+  <div class="item">
+    <h2><i class="fa fa-meh-o"></i></h2>
+    <h4>No results found</h4>
+  </div>
+  <div class="item bottom"></div>
 </div>
 
 <div ng-hide="chartData.hits === 0" class="visualize-chart"></div>
