--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -197,7 +197,7 @@ p.rows-label, p.columns-label {
   stroke-width: 1px;
 }
 
-line, .axis line, .axis path {
+.axis line, .axis path {
   stroke: #ddd;
   fill: none;
   shape-rendering: crispEdges;
