--- a/desktop/src/kibana/styles/theme/_theme.less
+++ b/desktop/src/kibana/styles/theme/_theme.less
@@ -26,12 +26,15 @@
   }
 
   &-brand {
-    padding: 18.5px 15px 20.5px;
+    padding: 12px 15px 30px;
   }
 
   &-nav {
     font-size: @font-size-small;
-    height: @navbar-height;
+  }
+
+  &-toggle {
+    margin-top: 4px;
   }
 }
 
