--- a/desktop/src/kibana/styles/_notify.less
+++ b/desktop/src/kibana/styles/_notify.less
@@ -13,32 +13,64 @@
   }
 
   .alert {
-    padding: 0.00001px 15px;
+    padding: 0 15px;
     margin: 0;
-    border-width: 0 0 1px 0;
     border-radius: 0;
-    min-height: 40px;
-    line-height: 40px;
+    border: 0px;
+  }
 
-    .toaster-controls {
-      button.btn {
-        height: 40px;
-        border: 0;
-        border-radius: 0;
-        max-height: 40px;
+  .toast {
+    .display(flex);
+    .align-items(center);
+
+    > * {
+      .flex(0 0 auto);
+      &:not(:last-child) {
+        margin-right: 4px;
       }
     }
 
-    .toaster-stack {
-      padding-bottom: 10px;
+    &-message {
+      .flex(1 1 auto);
+      .ellipsis();
+      line-height: normal;
     }
 
-    pre {
-      display: inline-block;
-      width: 100%;
-      margin: 10px 0;
-      word-break: normal;
-      word-wrap: normal;
+    &-stack {
+      padding-bottom: 10px;
+
+      pre {
+        display: inline-block;
+        width: 100%;
+        margin: 10px 0;
+        word-break: normal;
+        word-wrap: normal;
+      }
     }
+
+    &-controls {
+      .display(flex);
+
+      button {
+        .flex(0 0 auto);
+        border: 0;
+        border-radius: 0;
+        padding: 10px 15px;
+      }
+    }
+  }
+
+  // add darkened background to the different badges
+  .alert-success .badge {
+    background: darken(@alert-success-bg, 25%);
+  }
+  .alert-info .badge {
+    background: darken(@alert-info-bg, 25%);
+  }
+  .alert-warning .badge {
+    background: darken(@alert-warning-bg, 25%);
+  }
+  .alert-danger .badge {
+    background: darken(@alert-danger-bg, 25%);
   }
 }
