updated tootlip to append to body and to display within a container, closes #299, removed k4tip from column chart layout, added basic tests for tooltip

--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -217,7 +217,7 @@ path, line, .axis line, .axis path {
   stroke: 3px;
 }
 
-.k4tip {
+.k4tip, .vis-tooltip {
   line-height: 1.1;
   font-size: 12px;
   font-weight: normal;
