--- a/desktop/src/kibana/components/vislib/components/styles/main.less
+++ b/desktop/src/kibana/components/vislib/components/styles/main.less
@@ -252,12 +252,13 @@ path, line, .axis line, .axis path {
 
 .error {
   .flex(1 1 100%);
+  .display(flex);
+  .align-items(center);
   text-align: center;
 
   p {
-    margin-top: 15%;
+    .flex(1 1 auto);
     font-size: 18px;
-    text-wrap: wrap;
   }
 }
 
